Horizontal Scroll on ipad possibly fixed

--- a/src/app/components/GalleryStudio/GalleryStudio.scss
+++ b/src/app/components/GalleryStudio/GalleryStudio.scss
@@ -10,7 +10,7 @@
 .galleryStudio {
   display: flex;
   min-height: 550px;
-  height: 100%;
+  height: -webkit-fill-available;
   max-height: 1800px;
   margin-bottom: 20px;
   gap: 30px;
@@ -21,6 +21,19 @@
   animation: fadeInAnimation ease 2s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.galleryStudio::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.galleryStudio {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .image {
